# ironclad

./: .coverage-baseline  .dockerignore  .gitignore  .tmp_audit_results.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  NOTICE  README.md  deny.toml  install.ps1  install.sh  ironclad-eval.toml  ironclad-ui-test.toml  justfile
crates/ironclad-agent/: Cargo.toml  README.md
crates/ironclad-agent/fuzz/: Cargo.toml
crates/ironclad-agent/fuzz/fuzz_targets/: fuzz_check_injection.rs  fuzz_scan_output.rs
crates/ironclad-agent/src/: analyzer.rs  approvals.rs  context.rs  device.rs  digest.rs  discovery.rs  governor.rs  ingest.rs  injection.rs  interview.rs  knowledge.rs  learning.rs  lib.rs  loop.rs  manifest.rs  mcp.rs  mcp_handler.rs  memory.rs  obsidian.rs  obsidian_tools.rs  orchestration.rs  policy.rs  prompt.rs  recommendations.rs  retrieval.rs  script_runner.rs  services.rs  skills.rs  spawning.rs  speculative.rs  subagents.rs  test_support.rs  tools.rs  typestate.rs  wasm.rs  workspace.rs
crates/ironclad-api/: Cargo.toml
crates/ironclad-api/src/: cron_runtime.rs  dashboard.rs  lib.rs
crates/ironclad-browser/: Cargo.toml  README.md
crates/ironclad-browser/src/: actions.rs  cdp.rs  lib.rs  manager.rs  session.rs
crates/ironclad-channels/: Cargo.toml  README.md
crates/ironclad-channels/fuzz/: Cargo.toml
crates/ironclad-channels/fuzz/fuzz_targets/: fuzz_parse_ws_message.rs  fuzz_sanitize_platform.rs  fuzz_signal_parse_inbound.rs  fuzz_telegram_parse_inbound.rs  fuzz_whatsapp_parse_inbound.rs
crates/ironclad-channels/src/: a2a.rs  allowlist.rs  delivery.rs  discord.rs  email.rs  ext.rs  filter.rs  formatter.rs  helpers.rs  lib.rs  media.rs  router.rs  signal.rs  telegram.rs  voice.rs  web.rs  whatsapp.rs
crates/ironclad-cli/: Cargo.toml  build.rs
crates/ironclad-cli/src/: lib.rs
crates/ironclad-cli/src/cli/: defrag.rs  update.rs
crates/ironclad-cli/src/migrate/: mod.rs  transform.rs
crates/ironclad-core/: Cargo.toml  README.md
crates/ironclad-core/fuzz/: Cargo.toml  toml.dict
crates/ironclad-core/fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_config_validate.rs
crates/ironclad-core/src/: bundled_providers.toml  config.rs  config_utils.rs  error.rs  input_capability_scan.rs  keystore.rs  lib.rs  personality.rs  security.rs  style.rs  types.rs
crates/ironclad-core/src/config/: agent_paths.rs  impl_core.rs  migration.rs  model_core.rs  model_wallet.rs  preamble_types.rs  runtime_core.rs  runtime_ops.rs  runtime_sections.rs  tests.rs  tests_paths_and_defaults.rs  tests_roundtrip.rs  tests_security_and_migration.rs  tests_struct_defaults.rs  tests_validation.rs  treasury_wallet.rs
crates/ironclad-db/: Cargo.toml  README.md
crates/ironclad-db/fuzz/: Cargo.toml
crates/ironclad-db/fuzz/fuzz_targets/: fuzz_derive_nickname.rs  fuzz_message_role_parse.rs  fuzz_session_status_parse.rs
crates/ironclad-db/proptest-regressions/: sessions.txt
crates/ironclad-db/src/: abuse.rs  agents.rs  ann.rs  approvals.rs  backend.rs  cache.rs  checkpoint.rs  cron.rs  delivery_queue.rs  efficiency.rs  embeddings.rs  ext.rs  hippocampus.rs  hygiene_log.rs  learned_skills.rs  lib.rs  memory.rs  metrics.rs  model_selection.rs  policy.rs  revenue_accounting.rs  revenue_feedback.rs  revenue_introspection.rs  revenue_opportunity_queries.rs  revenue_scoring.rs  revenue_strategy_summary.rs  revenue_swap_tasks.rs  revenue_tax_tasks.rs  routing_dataset.rs  schema.rs  service_revenue.rs  sessions.rs  shadow_routing.rs  skills.rs  tasks.rs  tools.rs
crates/ironclad-db/src/migrations/: 001_initial.sql  014_service_revenue.sql  015_revenue_opportunities.sql  016_revenue_profit_accounting.sql  017_revenue_opportunity_scoring.sql  018_revenue_feedback.sql  019_revenue_settled_at.sql  020_rename_soul_history.sql  021_learning_loop.sql  022_skill_registry_protocol.sql  023_hygiene_log.sql
crates/ironclad-harness/: Cargo.toml
crates/ironclad-harness/src/: client.rs  config_gen.rs  golden.rs  lib.rs  mock_llm.rs  port_pool.rs  sandbox.rs
crates/ironclad-harness/tests/: agent_pathway.rs  api_domain.rs  api_memory.rs  api_sessions.rs  api_smoke.rs  cli_smoke.rs  dashboard.rs  process_mode.rs  tool_shim.rs  websocket.rs
crates/ironclad-llm/: Cargo.toml  README.md
crates/ironclad-llm/fuzz/: Cargo.toml  sse.dict
crates/ironclad-llm/src/: accuracy.rs  cache.rs  capacity.rs  cascade.rs  circuit.rs  client.rs  compression.rs  dedup.rs  embedding.rs  eval_harness.rs  format.rs  lib.rs  ml_router.rs  oauth.rs  profile.rs  provider.rs  router.rs  tier.rs  tiered.rs  transform.rs  uniroute.rs
crates/ironclad-plugin-sdk/: Cargo.toml  README.md
crates/ironclad-plugin-sdk/fuzz/: Cargo.toml  manifest.dict
crates/ironclad-plugin-sdk/src/: archive.rs  catalog.rs  lib.rs  loader.rs  manifest.rs  registry.rs  script.rs
crates/ironclad-schedule/: Cargo.toml  README.md
crates/ironclad-schedule/fuzz/: Cargo.toml
crates/ironclad-schedule/src/: heartbeat.rs  lib.rs  scheduler.rs  tasks.rs
crates/ironclad-server/: Cargo.toml  README.md  banner.txt  ironclad.toml
crates/ironclad-server/data/: builtin-skills.json
crates/ironclad-server/skills/: explain.md  review.md  search.md
crates/ironclad-server/src/: abuse.rs  api.rs  auth.rs  cli.rs  config_maintenance.rs  config_runtime.rs  cron_runtime.rs  daemon.rs  dashboard.rs  dashboard_spa.html  lib.rs  main.rs  plugins.rs  rate_limit.rs  state_hygiene.rs  test_support.rs  ws.rs  ws_ticket.rs
crates/ironclad-server/tests/: cli_integration.rs
crates/ironclad-tests/: Cargo.toml
crates/ironclad-tests/src/: a2a_protocol.rs  agent_loop.rs  cron_lifecycle.rs  fault_injection.rs  injection_defense.rs  lib.rs  memory_integration.rs  parity.rs  personality_integration.rs  platform.rs  rag_pipeline.rs  round_trip.rs  router_integration.rs  server_api.rs  skill_hot_reload.rs  skill_system.rs  treasury_integration.rs  yield_flow.rs
crates/ironclad-wallet/: Cargo.toml  README.md
crates/ironclad-wallet/src/: evm_submit.rs  lib.rs  money.rs  treasury.rs  wallet.rs  x402.rs  yield_engine.rs
(+321 files in other folders)
