[workspace]
resolver = "3"
members = [
    "crates/ironclad-core",
    "crates/ironclad-db",
    "crates/ironclad-llm",
    "crates/ironclad-agent",
    "crates/ironclad-wallet",
    "crates/ironclad-schedule",
    "crates/ironclad-channels",
    "crates/ironclad-server",
    "crates/ironclad-plugin-sdk",
    "crates/ironclad-browser",
    "crates/ironclad-tests",
]
exclude = ["crates/ironclad-agent/fuzz"]

[workspace.package]
version = "0.8.9"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
homepage = "https://roboticus.ai"
repository = "https://github.com/robot-accomplice/ironclad"
keywords = ["agent", "llm", "autonomous", "ai", "runtime"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
ironclad-core = { path = "crates/ironclad-core", version = "0.8.9" }
ironclad-db = { path = "crates/ironclad-db", version = "0.8.9" }
ironclad-llm = { path = "crates/ironclad-llm", version = "0.8.9" }
ironclad-agent = { path = "crates/ironclad-agent", version = "0.8.9" }
ironclad-wallet = { path = "crates/ironclad-wallet", version = "0.8.9" }
ironclad-schedule = { path = "crates/ironclad-schedule", version = "0.8.9" }
ironclad-channels = { path = "crates/ironclad-channels", version = "0.8.9" }
ironclad-plugin-sdk = { path = "crates/ironclad-plugin-sdk", version = "0.8.9" }
ironclad-browser = { path = "crates/ironclad-browser", version = "0.8.9" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
subtle = "2"
proptest = "1"
