[package]
name = "ironclad-agent"
version.workspace = true
edition.workspace = true
description = "Agent core with ReAct loop, policy engine, injection defense, memory system, and skill loader"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
ironclad-llm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait = "0.1"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
serde_yaml = "0.9"
unicode-normalization = "0.1"
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
wasmer = "7"
urlencoding = "2"
thiserror = "2"
rmcp = { workspace = true, features = ["server", "client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
pdf-extract = "0.7"
notify = { version = "7", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[features]
vault-watcher = ["notify"]

[dev-dependencies]
tempfile = "3"
wat = "1"
