[package]
name = "ironclad-api"
version.workspace = true
edition.workspace = true
description = "HTTP routes, WebSocket, auth, rate limiting, and dashboard for the Ironclad agent runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
ironclad-llm.workspace = true
ironclad-agent = { workspace = true, features = ["vault-watcher"] }
ironclad-wallet.workspace = true
ironclad-schedule.workspace = true
ironclad-channels.workspace = true
ironclad-plugin-sdk.workspace = true
ironclad-browser.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio-stream = "0.1"
toml = "0.8"
futures-util = "0.3"
async-stream = "0.3"
rand = "0.8"
subtle = { workspace = true }
regex = "1"
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "tower"] }
async-trait = "0.1"
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
