[package]
name = "ironclad-browser"
version.workspace = true
edition.workspace = true
description = "Headless browser automation via Chrome DevTools Protocol"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
