[package]
name = "ironclad-channels"
version.workspace = true
edition.workspace = true
description = "Chat adapters for Telegram, WhatsApp, Discord, WebSocket, and A2A protocol"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
async-trait = "0.1"
x25519-dalek = "2"
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-imap = "0.10"
async-native-tls = "0.5"
mail-parser = "0.9"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
proptest = { workspace = true }
