[package]
name = "ironclad-cli"
version.workspace = true
edition.workspace = true
description = "CLI commands and migration engine for the Ironclad agent runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
ironclad-core.workspace = true
ironclad-llm.workspace = true
ironclad-plugin-sdk.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
uuid = { workspace = true }
sha2 = "0.10"
hex = "0.4"
regex = "1"
ureq = "2"
dialoguer = "0.11"
rusqlite = { workspace = true }
ironclad-db.workspace = true
ironclad-schedule.workspace = true
tokio-stream = "0.1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
axum = { version = "0.8", features = ["ws"] }
