[package]
name = "ironclad-core"
version.workspace = true
edition.workspace = true
description = "Shared types, config parsing, personality system, and error types for the Ironclad agent runtime"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
chrono = { workspace = true }
tracing = { workspace = true }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
