[package]
name = "ironclad-db"
version.workspace = true
edition.workspace = true

[dependencies]
ironclad-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
