[package]
name = "ironclad-db"
version.workspace = true
edition.workspace = true
description = "SQLite persistence layer with 28 tables, FTS5 search, WAL mode, and migration system"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
instant-distance = "0.6"

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
