[package]
name = "ironclad-harness"
version.workspace = true
edition.workspace = true
publish = false
description = "Parallel smoke/UAT testing harness with sandboxed server instances"

[features]
default = []
full-process = []

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
ironclad-llm.workspace = true
ironclad-agent = { path = "../ironclad-agent" }
ironclad-wallet = { path = "../ironclad-wallet" }
ironclad-schedule = { path = "../ironclad-schedule" }
ironclad-channels = { path = "../ironclad-channels" }
ironclad-server = { path = "../ironclad-server" }
ironclad-plugin-sdk = { path = "../ironclad-plugin-sdk" }
ironclad-browser = { path = "../ironclad-browser" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tracing = { workspace = true }
futures-util = "0.3"
axum = "0.8"
wiremock = "0.6"

[lib]
name = "ironclad_harness"
path = "src/lib.rs"
doctest = false
