[package]
name = "ironclad-llm"
version.workspace = true
edition.workspace = true
description = "LLM client pipeline with circuit breaker, ML model router, semantic cache, and multi-format translation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
