[package]
name = "ironclad-plugin-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
ironclad-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
