[package]
name = "ironclad-schedule"
version.workspace = true
edition.workspace = true

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
ironclad-agent.workspace = true
ironclad-wallet.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
