[package]
name = "ironclad-schedule"
version.workspace = true
edition.workspace = true
description = "Cron/heartbeat scheduler with DB-backed leases and wake signaling"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
ironclad-agent.workspace = true
ironclad-wallet.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tracing.workspace = true
cron = "0.15"

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["test-util"] }
