[package]
name = "ironclad-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
ironclad-core.workspace = true
ironclad-db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa"] }
sha3 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
