[package]
name = "ironclad-wallet"
version.workspace = true
edition.workspace = true
description = "Ethereum wallet with x402 payments, treasury policy engine, and DeFi yield optimization"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ironclad-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa"] }
sha3 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
alloy = { version = "0.8", features = ["contract", "provider-http", "signer-local", "sol-types"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
