[package]
name = "ironclad-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ironclad-core = { path = ".." }

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
doc = false

[[bin]]
name = "fuzz_config_validate"
path = "fuzz_targets/fuzz_config_validate.rs"
doc = false

[workspace]
