[package]
name = "ironclad-llm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ironclad-llm = { path = ".." }
ironclad-core = { path = "../../ironclad-core" }

[[bin]]
name = "fuzz_parse_sse_chunk"
path = "fuzz_targets/fuzz_parse_sse_chunk.rs"
doc = false

[workspace]
